--- a/UCR.Negotium/Dialogs/RegistrarCosto.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarCosto.xaml
@@ -5,8 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UCR.Negotium.Dialogs"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        mc:Ignorable="d"
-        BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
+        mc:Ignorable="d" BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
         WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
         Title="Costo | Negotium v1.0" Height="650" Width="450">
     <Grid Margin="10">
@@ -39,48 +38,39 @@
                          TextChanged="tbNombreCosto_TextChanged"/>
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
-                <ComboBox ItemsSource="{Binding AnosDisponibles}"
-                                          SelectedValue="{Binding CostoSelected.AnoCosto}" />
+                <ComboBox ItemsSource="{Binding AnosDisponibles}" 
+                          SelectedValue="{Binding CostoSelected.AnoCosto}" />
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
                 <ComboBox ItemsSource="{Binding UnidadesMedida}" SelectedValuePath="CodUnidad"
-                                          SelectedValue="{Binding CostoSelected.UnidadMedida.CodUnidad}" />
+                          SelectedValue="{Binding CostoSelected.UnidadMedida.CodUnidad}" />
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
-                <ComboBox ItemsSource="{Binding Categorias}"
-                                          SelectedValue="{Binding CostoSelected.CategoriaCosto}" />
+                <ComboBox ItemsSource="{Binding Categorias}" 
+                          SelectedValue="{Binding CostoSelected.CategoriaCosto}" />
             </Grid>
         </StackPanel>
         <DataGrid Grid.ColumnSpan="2" CanUserSortColumns="False" SelectionUnit="Cell" Name="dgCostosMensual"
                 ItemsSource="{Binding CostoSelected.CostosMensuales, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
                 SelectedItem="{Binding CostoMensualSelected, UpdateSourceTrigger=PropertyChanged}"
-                BorderThickness="1"
-                BorderBrush="{DynamicResource AccentColorBrush}"
-                AllowDrop="False" 
-                CanUserAddRows="False" 
-                CanUserDeleteRows="False" 
-                AutoGenerateColumns="False"
-                Margin="27,165,27,10" Grid.Row="1">
-
+                BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
+                AllowDrop="False" CanUserAddRows="False" CanUserDeleteRows="False" 
+                AutoGenerateColumns="False" Margin="27,165,27,10" Grid.Row="1">
             <DataGrid.Style>
                 <Style BasedOn="{StaticResource MetroDataGrid}" TargetType="{x:Type DataGrid}">
                     <Setter Property="AlternatingRowBackground" Value="{DynamicResource GrayBrush10}" />
                 </Style>
             </DataGrid.Style>
-
             <DataGrid.Columns>
-                <DataGridTextColumn IsReadOnly="True"
-                    Binding="{Binding Path=Mes}" Header="Mes" Width="4*"/>
-                <DataGridTextColumn 
-                    Binding="{Binding Path=Cantidad}" Header="Cantidad" Width="3*">
+                <DataGridTextColumn IsReadOnly="True" Binding="{Binding Path=Mes}" Header="Mes" Width="4*"/>
+                <DataGridTextColumn Binding="{Binding Path=Cantidad}" Header="Cantidad" Width="3*">
                     <DataGridTextColumn.EditingElementStyle>
                         <Style TargetType="{x:Type TextBox}">
                             <EventSetter Event="TextChanged" Handler="tbDatosPositivos_TextChanged" />
                         </Style>
                     </DataGridTextColumn.EditingElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn
-                    Binding="{Binding Path=CostoUnitario}" Header="Precio (₡)" Width="3*">
+                <DataGridTextColumn Binding="{Binding Path=CostoUnitario}" Header="Precio (₡)" Width="3*">
                     <DataGridTextColumn.EditingElementStyle>
                         <Style TargetType="{x:Type TextBox}">
                             <EventSetter Event="TextChanged" Handler="tbDatosPositivos_TextChanged" />
@@ -92,10 +82,8 @@
         <Grid Grid.Row="2" Grid.ColumnSpan="2">
             <Button  Name="btnGuardar" Content="Guardar" Click="btnGuardar_Click" Width="75"
                      HorizontalAlignment="Left" Margin="82,15,0,0" Grid.Row="2" VerticalAlignment="Top"/>
-
-            <Button Name="btnCancelar" Content="Cancelar" Width="75"
-                    HorizontalAlignment="Right" Margin="0,15,82,0" Grid.Row="2" VerticalAlignment="Top"
-                    Click="btnCancelar_Click"/>
+            <Button Name="btnCancelar" Content="Cancelar" Width="75" Click="btnCancelar_Click"
+                    HorizontalAlignment="Right" Margin="0,15,82,0" Grid.Row="2" VerticalAlignment="Top"/>
         </Grid>
     </Grid>
 </Controls:MetroWindow>
