--- a/UCR.Negotium/Dialogs/RegistrarEncargado.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarEncargado.xaml
@@ -8,72 +8,50 @@
         mc:Ignorable="d" Closing="MetroWindow_Closing"
         BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
         WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize"
-        Title="Encargado | Negotium v1.0" Height="340" Width="450">
+        Title="Encargado | Negotium v1.0" Height="340" Width="430">
     <Grid Margin="10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="1.5*"/>
-            <RowDefinition Height="6.5*"/>
+            <RowDefinition Height="8*"/>
             <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="170"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Grid Grid.ColumnSpan="2">
-            <RichTextBox FontSize="14" BorderThickness="0">
-                <FlowDocument>
-                    <Paragraph>
-                        <Run Text="Ingrese los datos del Encargado de asesorar el proceso de registro del Proyecto"/>
-                    </Paragraph>
-                </FlowDocument>
-            </RichTextBox>
-        </Grid>
-        <StackPanel Grid.Row="1">
-            <Grid Style="{StaticResource gridFormStyle}">
-                <Label Content="Nombre Encargado:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <Label Content="Apellidos Encargado:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <Label Content="Nommbre de la Organización:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <Label Content="Teléfono:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <Label Content="Correo Electrónico:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            </Grid>
-        </StackPanel>
-        <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,27,0">
-            <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding EncargadoSelected.Nombre}" Name="tbNombreEncargado" 
-                         TextChanged="tbNombreEncargado_TextChanged"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding EncargadoSelected.Apellidos}" Name="tbApellidos" 
-                         TextChanged="tbApellidos_TextChanged"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding EncargadoSelected.Organizacion}" Name="tbNombreOrganizacion" 
-                         TextChanged="tbNombreOrganizacion_TextChanged"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding EncargadoSelected.Telefono}" Name="tbTelefono" 
-                         TextChanged="tbTelefono_TextChanged"/>
-            </Grid>
-            <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding EncargadoSelected.Email}" Name="tbEmail" 
-                         TextChanged="tbEmail_TextChanged"/>
-            </Grid>
-        </StackPanel>
+        <GroupBox Grid.ColumnSpan="2" Header="Encargado de asesorar el proceso de registro del Proyecto">
+            <StackPanel Grid.Row="1" Margin="10,0">
+                <StackPanel Style="{StaticResource horizontalPanelFormStyle}">
+                    <Label Content="Nombre Encargado:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                    <TextBox Text="{Binding EncargadoSelected.Nombre}" Name="tbNombreEncargado" 
+                         TextChanged="tbNombreEncargado_TextChanged" Width="230"/>
+                </StackPanel>
+                <StackPanel Style="{StaticResource horizontalPanelFormStyle}">
+                    <Label Content="Apellidos Encargado:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                    <TextBox Text="{Binding EncargadoSelected.Apellidos}" Name="tbApellidos" 
+                         TextChanged="tbApellidos_TextChanged" Width="225"/>
+                </StackPanel>
+                <StackPanel Style="{StaticResource horizontalPanelFormStyle}">
+                    <Label Content="Nommbre de la Organización:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                    <TextBox Text="{Binding EncargadoSelected.Organizacion}" Name="tbNombreOrganizacion" 
+                         TextChanged="tbNombreOrganizacion_TextChanged" Width="175"/>
+                </StackPanel>
+                <StackPanel Style="{StaticResource horizontalPanelFormStyle}">
+                    <Label Content="Teléfono:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                    <TextBox Text="{Binding EncargadoSelected.Telefono}" Name="tbTelefono" 
+                         TextChanged="tbTelefono_TextChanged" Width="285"/>
+                </StackPanel>
+                <StackPanel Style="{StaticResource horizontalPanelFormStyle}">
+                    <Label Content="Correo Electrónico:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                    <TextBox Text="{Binding EncargadoSelected.Email}" Name="tbEmail" 
+                         TextChanged="tbEmail_TextChanged" Width="235"/>
+                </StackPanel>
+            </StackPanel>
+        </GroupBox>
         <Grid Grid.Row="2" Grid.ColumnSpan="2">
-            <Button  Name="btnGuardar" Content="Guardar" Click="btnGuardar_Click" Width="75"
-                     HorizontalAlignment="Left" Margin="82,10,0,0" Grid.Row="2" VerticalAlignment="Top"/>
-
-            <Button Name="btnCancelar" Content="Cancelar" Width="75"
-                    HorizontalAlignment="Right" Margin="0,10,82,0" Grid.Row="2" VerticalAlignment="Top"
-                    Click="btnCancelar_Click"/>
+            <Button Name="btnGuardar" Content="Guardar" Click="btnGuardar_Click" Width="75"
+                    HorizontalAlignment="Left" Margin="82,10,0,0" Grid.Row="2" VerticalAlignment="Top"/>
+            <Button Name="btnCancelar" Content="Cancelar" Width="75" Click="btnCancelar_Click"
+                    HorizontalAlignment="Right" Margin="0,10,82,0" Grid.Row="2" VerticalAlignment="Top"/>
         </Grid>
     </Grid>
 </Controls:MetroWindow>
