--- a/UCR.Negotium/Dialogs/RegistrarReinversion.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarReinversion.xaml
@@ -67,20 +67,20 @@
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
                 <ComboBox ItemsSource="{Binding Inversiones}" SelectedValuePath="CodRequerimientoInversion"
-                                          SelectedValue="{Binding Reinversion.CodRequerimientoInversion}" 
+                          SelectedValue="{Binding Reinversion.CodRequerimientoInversion}" 
                           Name="cbxInversiones" SelectionChanged="cbxInversiones_SelectionChanged"/>
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
                 <ComboBox ItemsSource="{Binding AnosDisponibles}" 
-                                          SelectedValue="{Binding Reinversion.AnoReinversion}" />
+                          SelectedValue="{Binding Reinversion.AnoReinversion}" />
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
                 <ComboBox ItemsSource="{Binding UnidadesMedida}" SelectedValuePath="CodUnidad"
-                                          SelectedValue="{Binding Reinversion.UnidadMedida.CodUnidad}" />
+                          SelectedValue="{Binding Reinversion.UnidadMedida.CodUnidad}" />
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
-                <Controls:NumericUpDown Minimum="1" TextAlignment="Left"
-                    Value="{Binding Reinversion.Cantidad}" Margin="0,0,140,0"/>
+                <Controls:NumericUpDown Minimum="1" TextAlignment="Left" 
+                                        Value="{Binding Reinversion.Cantidad}" Margin="0,0,140,0"/>
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
                 <TextBox Text="{Binding Reinversion.CostoUnitario}" Margin="0,0,140,0" Name="tbCostoUnitario" 
@@ -102,12 +102,10 @@
             </Grid>
         </StackPanel>
         <Grid Grid.Row="2" Grid.ColumnSpan="2">
-            <Button  Name="btnGuardar" Content="Guardar" Click="btnGuardar_Click" Width="75"
-                     HorizontalAlignment="Left" Margin="82,30,0,0" Grid.Row="2" VerticalAlignment="Top"/>
-
-            <Button Name="btnCancelar" Content="Cancelar" Width="75"
-                    HorizontalAlignment="Right" Margin="0,30,82,0" Grid.Row="2" VerticalAlignment="Top"
-                    Click="btnCancelar_Click"/>
+            <Button Name="btnGuardar" Content="Guardar" Click="btnGuardar_Click" Width="75"
+                    HorizontalAlignment="Left" Margin="82,30,0,0" Grid.Row="2" VerticalAlignment="Top"/>
+            <Button Name="btnCancelar" Content="Cancelar" Width="75" Click="btnCancelar_Click"
+                    HorizontalAlignment="Right" Margin="0,30,82,0" Grid.Row="2" VerticalAlignment="Top"/>
         </Grid>
     </Grid>
 </Controls:MetroWindow>
