--- a/UCR.Negotium/Dialogs/RegistrarTasaInteresFijo.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarTasaInteresFijo.xaml
@@ -12,16 +12,14 @@
     <Grid Margin="10">
         <Grid Grid.Row="1" x:Name="gridTasaFija" Height="65" VerticalAlignment="Top" Margin="27,20,27,80">
             <Label Content="Porcentaje de Interés Fijo:" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-            <TextBox Text="{Binding InteresFijo.PorcentajeInteres}" Margin="150,0,27,35" Name="tbTasaInteresFijo" 
-                         TextChanged="tbTasaInteresFijo_TextChanged"/>
+            <TextBox Text="{Binding InteresFijo.PorcentajeInteres}" Margin="150,0,27,35" 
+                     Name="tbTasaInteresFijo" TextChanged="tbTasaInteresFijo_TextChanged"/>
         </Grid>
         <Grid Grid.Row="2" Grid.ColumnSpan="2" Height="70" VerticalAlignment="Bottom">
             <Button  Name="btnGuardar" Content="Guardar" Click="btnGuardar_Click" Width="75"
                      HorizontalAlignment="Left" Margin="82,15,0,0" Grid.Row="2" VerticalAlignment="Top"/>
-
-            <Button Name="btnCancelar" Content="Cancelar" Width="75"
-                    HorizontalAlignment="Right" Margin="0,15,82,0" Grid.Row="2" VerticalAlignment="Top"
-                    Click="btnCancelar_Click"/>
+            <Button Name="btnCancelar" Content="Cancelar" Width="75" Click="btnCancelar_Click"
+                    HorizontalAlignment="Right" Margin="0,15,82,0" Grid.Row="2" VerticalAlignment="Top"/>
         </Grid>
     </Grid>
 </Controls:MetroWindow>
