--- a/UCR.Negotium/Dialogs/RegistrarTasaInteresFinanciamiento.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarTasaInteresFinanciamiento.xaml
@@ -15,18 +15,14 @@
                 BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}" AllowDrop="False" 
                 CanUserAddRows="False" CanUserDeleteRows="False" AutoGenerateColumns="False"
                 Margin="27,20,27,80" Grid.Row="1" Height="250">
-
             <DataGrid.Style>
                 <Style BasedOn="{StaticResource MetroDataGrid}" TargetType="{x:Type DataGrid}">
                     <Setter Property="AlternatingRowBackground" Value="{DynamicResource GrayBrush10}" />
                 </Style>
             </DataGrid.Style>
-
             <DataGrid.Columns>
-                <DataGridTextColumn IsReadOnly="True"
-                    Binding="{Binding Path=AnoInteres}" Header="Año" Width="4*"/>
-                <DataGridTextColumn
-                    Binding="{Binding Path=PorcentajeInteres}" Header="Porcentaje (%)" Width="6*">
+                <DataGridTextColumn IsReadOnly="True" Binding="{Binding Path=AnoInteres}" Header="Año" Width="4*"/>
+                <DataGridTextColumn Binding="{Binding Path=PorcentajeInteres}" Header="Porcentaje (%)" Width="6*">
                     <DataGridTextColumn.EditingElementStyle>
                         <Style TargetType="{x:Type TextBox}">
                             <EventSetter Event="TextChanged" Handler="tbDatosPositivos_TextChanged" />
@@ -38,10 +34,8 @@
         <Grid Grid.Row="2" Grid.ColumnSpan="2" Height="70" VerticalAlignment="Bottom">
             <Button  Name="btnGuardar" Content="Guardar" Click="btnGuardar_Click" Width="75"
                      HorizontalAlignment="Left" Margin="82,15,0,0" Grid.Row="2" VerticalAlignment="Top"/>
-
-            <Button Name="btnCancelar" Content="Cancelar" Width="75"
-                    HorizontalAlignment="Right" Margin="0,15,82,0" Grid.Row="2" VerticalAlignment="Top"
-                    Click="btnCancelar_Click"/>
+            <Button Name="btnCancelar" Content="Cancelar" Width="75" Click="btnCancelar_Click"
+                    HorizontalAlignment="Right" Margin="0,15,82,0" Grid.Row="2" VerticalAlignment="Top"/>
         </Grid>
     </Grid>
 </Controls:MetroWindow>
