--- a/UCR.Negotium/Dialogs/RegistrarVariacionAnualCostos.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarVariacionAnualCostos.xaml
@@ -17,25 +17,17 @@
         </Grid.RowDefinitions>
         <DataGrid CanUserSortColumns="False" SelectionUnit="Cell" Name="dgVariacionAnual"
                 ItemsSource="{Binding VariacionCostos, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
-                BorderThickness="1"
-                BorderBrush="{DynamicResource AccentColorBrush}"
-                AllowDrop="False" 
-                CanUserAddRows="False" 
-                CanUserDeleteRows="False" 
-                AutoGenerateColumns="False"
+                BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}" AllowDrop="False" 
+                CanUserAddRows="False" CanUserDeleteRows="False" AutoGenerateColumns="False"
                 Margin="27,10,27,10" Grid.Row="1">
-
             <DataGrid.Style>
                 <Style BasedOn="{StaticResource MetroDataGrid}" TargetType="{x:Type DataGrid}">
                     <Setter Property="AlternatingRowBackground" Value="{DynamicResource GrayBrush10}" />
                 </Style>
             </DataGrid.Style>
-
             <DataGrid.Columns>
-                <DataGridTextColumn IsReadOnly="True"
-                    Binding="{Binding Path=Ano}" Header="Año" Width="4*"/>
-                <DataGridTextColumn
-                    Binding="{Binding Path=PorcentajeIncremento}" Header="Porcentaje (%)" Width="6*">
+                <DataGridTextColumn IsReadOnly="True" Binding="{Binding Path=Ano}" Header="Año" Width="4*"/>
+                <DataGridTextColumn Binding="{Binding Path=PorcentajeIncremento}" Header="Porcentaje (%)" Width="6*">
                     <DataGridTextColumn.EditingElementStyle>
                         <Style TargetType="{x:Type TextBox}">
                             <EventSetter Event="TextChanged" Handler="tbDatosPositivos_TextChanged" />
@@ -47,10 +39,8 @@
         <Grid Grid.Row="2" Grid.ColumnSpan="2">
             <Button  Name="btnGuardar" Content="Guardar" Click="btnGuardar_Click" Width="75"
                      HorizontalAlignment="Left" Margin="82,15,0,0" Grid.Row="2" VerticalAlignment="Top"/>
-
-            <Button Name="btnCancelar" Content="Cancelar" Width="75"
-                    HorizontalAlignment="Right" Margin="0,15,82,0" Grid.Row="2" VerticalAlignment="Top"
-                    Click="btnCancelar_Click"/>
+            <Button Name="btnCancelar" Content="Cancelar" Width="75" Click="btnCancelar_Click"
+                    HorizontalAlignment="Right" Margin="0,15,82,0" Grid.Row="2" VerticalAlignment="Top"/>
         </Grid>
     </Grid>
 </Controls:MetroWindow>
